@@ -1,4 +1,5 @@
 version 1.2.1
+- Add Christian Rigamonti's Italian translation
 - More flexible and general support for collections of data
   files or script file
 - Add support for the data files from Davidson & MacKinnon,
